la requete de l'enfer

--- a/rapport/elasticsearch.tex
+++ b/rapport/elasticsearch.tex
@@ -490,7 +490,7 @@ interprété pour peu que le champ soit \textit{mappé comme date}(cf Mapping).
 Il est possible d'utiliser les opérateurs logiques \textbf{OR} et \textbf{AND} 
 dont l'utilisation est assez évidante \ldots
 \begin{lstlisting}[style=code,label={lst:APIsearchliteexample6},caption={Opérateurs logiques}]
-
++IPoutside:"8.8.8.8" +IPnat:"8.8.4.4" +(portnat:"37657" OR portnat:"19474")
 \end{lstlisting}
 
 
