--- a/rapport/scripts.tex
+++ b/rapport/scripts.tex
@@ -1,2 +1,6 @@
 
 \lstinputlisting[style=logstash,label={lst:scriptdelindex},caption={Script de suppression d'index}]{../code/remove.sh}
+
+\lstinputlisting[style=logstash,label={lst:scriptkibanaservice},caption={Service simple pour kibana}]{../code/kibana/kibana.service}
+Le chemin de l'application est là à titre indicatif, \ipath{/usr/local/bin} est plus 
+indiqué, par exemple.
