--- a/rapport/kibana.tex
+++ b/rapport/kibana.tex
@@ -20,6 +20,9 @@ aisé une fois les principes de bases assimilés.
 L'installation de Kibana est relativement simple, il suffit de télécharger l'application
 compressé à l'adresse sur le site de \url{https://download.elastic.co/kibana/kibana/kibana-4.0.2-linux-x64.tar.gz}{elastic}.
 On décompresse, on lance (\ipath{path/bin/kibana}), et c'est parti !
+Évidemment, si on execute kibana d'une telle manière il est préferable de le lancer
+depuis un tmux ou un screen (ou un quelconque multiplexeur de terminal). Il est 
+également facile de réaliser son propre service systemd.
 
 \subsection{Paramétrage}
 Afin de pouvoir se connecter à Elasticsearch il faut tout de même renseigner 
