Ajout année scolaire en plus du compilation time

--- a/rapport/title.tex
+++ b/rapport/title.tex
@@ -48,7 +48,8 @@ Vincent \textsc{Delove}
 
 \vspace{3mm}
 % Bottom of the page
-{Compilé le \today}%Lundi 23 Mars 2015}
+{Compilé le \today}\\[5mm]%Lundi 23 Mars 2015}
+Année Scolaire \textbf{2014-2015}%Lundi 23 Mars 2015
 
 \end{center}
 \end{titlepage}
