gras dans les tableaux elastic

--- a/rapport/elasticsearch.tex
+++ b/rapport/elasticsearch.tex
@@ -767,7 +767,7 @@ Considérons 2 phrases :
 \center
 \begin{tabular}{|l||c|c|}
 \hline
-Terms   & P1    &  P2\\ \hline  
+\textbf{Termes}   & \textbf{P1}    & \textbf{P2}\\ \hline  
 Quick   &       &  X\\ \hline  
 The     &   X   &   \\ \hline
 brown   &   X   &  X\\ \hline
@@ -795,7 +795,7 @@ Si je cherche \emph{quick brown}, le tableau ressemblerait à cela
 \center
 \begin{tabular}{|l||c|c|}
 \hline
-Terms   & P1    &  P2\\ \hline  
+\textbf{Termes}   & \textbf{P1}    & \textbf{P2}\\ \hline  
 brown   &   X   &  X\\ \hline
 quick   &   X   &   \\ \hline \hline
 Total   &   2   &  1 \\ \hline
